移除敏感文件